--- a/packages/search-in-workspace/src/browser/styles/index.css
+++ b/packages/search-in-workspace/src/browser/styles/index.css
@@ -25,7 +25,6 @@
 }
 
 .t-siw-search-container {
-  padding: 0px 1px;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -57,10 +56,18 @@
 .t-siw-search-container #search-input-field {
   background: none;
   border: none;
+  padding-block: 2px;
 }
 
 .t-siw-search-container .searchHeader {
-  padding: 5px 5px 15px 2px;
+  padding: var(--theia-ui-padding)
+           max(var(--theia-scrollbar-width), var(--theia-ui-padding))
+           10px 
+           2px;
+}
+
+#theia-main-content-panel .t-siw-search-container .searchHeader {
+  padding-top: 10px;
 }
 
 .t-siw-search-container .searchHeader .controls.button-container {
@@ -107,12 +114,12 @@
 }
 
 .t-siw-search-container .searchHeader .search-field .option-buttons {
-    height: 23px;
-    display: flex;
-    align-items: center;
-    align-self: flex-start;
-    background-color: none;
-    margin: 2px;
+  height: 23px;
+  display: flex;
+  align-items: center;
+  align-self: flex-start;
+  background-color: none;
+  margin: 2px;
 }
 
 .t-siw-search-container .searchHeader .search-field-container.tooManyResults {
@@ -122,9 +129,9 @@
 }
 
 .t-siw-search-container
-  .searchHeader
-  .search-field-container
-  .search-notification {
+.searchHeader
+.search-field-container
+.search-notification {
   height: 0;
   display: none;
   width: 100%;
@@ -132,9 +139,9 @@
 }
 
 .t-siw-search-container
-  .searchHeader
-  .search-field-container.focused
-  .search-notification.show {
+.searchHeader
+.search-field-container.focused
+.search-notification.show {
   display: block;
 }
 
@@ -178,7 +185,7 @@
 
 .t-siw-search-container .searchHeader .search-details {
   position: relative;
-  padding-top: 5px;
+  padding-top: 8px;
 }
 
 .t-siw-search-container .searchHeader .search-details .button-container {
@@ -194,14 +201,14 @@
 }
 
 .t-siw-search-container .searchHeader .glob-field-container .glob-field {
-  margin-bottom: 8px;
+  margin-bottom: 10px;
   margin-left: 18px;
   display: flex;
   flex-direction: column;
 }
 
 .t-siw-search-container .searchHeader .glob-field-container .glob-field .label {
-  margin-bottom: 3px;
+  margin-bottom: 5px;
   user-select: none;
   font-size: var(--theia-ui-font-size0);
 }
@@ -394,7 +401,8 @@
 
 .t-siw-search-container .searchHeader .search-info {
   color: var(--theia-descriptionForeground);
-  margin-left: 17px;
+  margin-left: 18px;
+  margin-top: 10px;
 }
 
 .theia-siw-lineNumber {
